--- a/views/gradein_answer_views.xml
+++ b/views/gradein_answer_views.xml
@@ -56,4 +56,5 @@
             <field name="view_mode">tree,form,search</field>
             <field name="view_id" ref="view_gradein_answer_tree"/>
         </record>
-
+    </data>
+</odoo>
