--- a/views/menu_services.xml
+++ b/views/menu_services.xml
@@ -1,11 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <!-- <menuitem id="menu_services" name="Service"
-        groups="group_services_user,group_services_manager"/>
+        <!-- TREE -->
+        <record id="view_gradein_question_tree" model="ir.ui.view">
+            <field name="name">Gradein Question</field>
+            <field name="model">gradein.question</field>
+            <field name="arch" type="xml">
+                <tree>
+                    <field name="name" />
+                    <field name="active" />
+                </tree>
+            </field>
+        </record>
 
-        <menuitem id="menu_service_config" name="Configuration" 
-        action="action_menu_services" parent="menu_services" groups="group_services_manager"/> -->
+        <!-- ACTION -->
+        <record id="action_menu_services" model="ir.actions.act_window">
+            <field name="name">Menu Services</field>
+            <field name="res_model">gradein.question</field>
+            <field name="view_mode">tree</field>
+            <field name="view_id" ref="view_gradein_question_tree" />
+        </record>
 
+        <!-- Menú de Servicios -->
+        <menuitem id="menu_services"
+            name="Services"
+            action="action_menu_services" />
+
+        <menuitem id="menu_services_config"
+            name="Configuration"
+            parent="menu_services"
+            groups="group_admin" />
     </data>
 </odoo>
