--- a/views/menu_services.xml
+++ b/views/menu_services.xml
@@ -29,6 +29,6 @@
         <menuitem id="menu_services_config"
             name="Configuration"
             parent="menu_services"
-            groups="group_admin" />
+            groups="group_services_manager" />
     </data>
 </odoo>
