--- a/views/menu_services.xml
+++ b/views/menu_services.xml
@@ -24,10 +24,17 @@
         <!-- Menú de Servicios -->
         <menuitem id="menu_services"
             name="Services"
-            action="action_menu_services" />
+        />
 
-        <menuitem id="menu_service_config" name="Configuration" 
-        action="action_menu_services" parent="menu_services" groups="group_services_manager"/> -->
+        <menuitem id="menu_service_config" 
+        name="Configuration" 
+        parent="menu_services" 
+        groups="group_services_manager"/>
+
+        <menuitem id="menu_action_gradein_questions" 
+            name="Questions" 
+            parent="menu_services_config"
+           action="action_menu_services"/>
 
     </data>
 </odoo>
