--- a/views/menu_services.xml
+++ b/views/menu_services.xml
@@ -31,6 +31,11 @@
             parent="menu_services"
             action="action_menu_services" 
            groups="group_services_manager"/>
-
+        
+        <menuitem id="menu_action_gradein_answers" 
+            name="Answer" 
+            parent="menu_services_config"
+           action="action_gradein_answers"/>
     </data>
+    
 </odoo>
