--- a/views/gradein_answer_views.xml
+++ b/views/gradein_answer_views.xml
@@ -56,6 +56,12 @@
             <field name="view_mode">tree,form,search</field>
             <field name="view_id" ref="view_gradein_answer_tree"/>
         </record>
+        
+        <!-- MENU ACTION -->
+        <menuitem id="menu_action_gradein_answers" 
+            name="Answer" 
+            parent="menu_services_config"
+           action="action_gradein_answers"/>
 
         
     </data>
