--- a/views/menu_services.xml
+++ b/views/menu_services.xml
@@ -4,7 +4,7 @@
         <!-- TREE -->
         <record id="view_gradein_question_tree" model="ir.ui.view">
             <field name="name">Gradein Question</field>
-            <field name="model">gradein.question</field>
+            <field name="model">gradein.equipment</field>
             <field name="arch" type="xml">
                 <tree>
                     <field name="name" />
@@ -16,7 +16,7 @@
         <!-- ACTION -->
         <record id="action_menu_services" model="ir.actions.act_window">
             <field name="name">Menu Services</field>
-            <field name="res_model">gradein.question</field>
+            <field name="res_model">gradein.equipment</field>
             <field name="view_mode">tree</field>
             <field name="view_id" ref="view_gradein_question_tree" />
         </record>
@@ -24,11 +24,16 @@
         <!-- Menú de Servicios -->
         <menuitem id="menu_services"
             name="Services"
-            action="action_menu_services" />
+        />
 
         <menuitem id="menu_services_config"
             name="Configuration"
             parent="menu_services"
-            groups="group_admin" />
+            action="action_menu_services" 
+           groups="group_services_manager"/>
+        
+
+
     </data>
+    
 </odoo>
