Update question view

--- a/views/gradein_question_views.xml
+++ b/views/gradein_question_views.xml
@@ -11,12 +11,8 @@
                     <group>
                         <field name="name"/>
                         <field name="active"/>
-
-                        <!-- <field name="equipment_type_ids"/> -->
-
                         <field name="equipment_type_ids"/>
-
-                        <field name="answer_ids"/>
+                        <field name="answer_ids" widget="many2many_tags"/>
                     </group>
                 </form>
             </field>
