--- a/views/gradein_equipment_views.xml
+++ b/views/gradein_equipment_views.xml
@@ -9,6 +9,9 @@
             <field name="arch" type="xml">
                 <tree>
                     <field name="name"/>
+                    <field name="description"/>
+                    <field name="price"/>
+
                 </tree>
             </field>
         </record>
