--- a/views/gradein_equipment_views.xml
+++ b/views/gradein_equipment_views.xml
@@ -20,7 +20,7 @@
 
         <!-- ACTION -->
         <record id="action_gradein_equipment" model="ir.actions.act_window">
-            <field name="name">Equipment Type</field>
+            <field name="name">Equipment</field>
             <field name="res_model">gradein.equipment</field>
             <field name="view_mode">tree</field>
             <field name="view_id" ref="view_gradein_equipment_tree"/>
