--- a/views/gradein_equipment_views.xml
+++ b/views/gradein_equipment_views.xml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-    
+    <!-- SEARCH -->
+        <record id="view_gradein_equipment_search" model="ir.ui.view">
+            <field name="name">gradein.equipment.search</field>
+            <field name="model">gradein.equipment</field>
+            <field name="arch" type="xml">
+                <search>
+                    <field name="name" filter_domain="[('name', 'ilike', self)]"/>
+                    <field name="description" filter_domain="[('name', 'ilike', self)]"/>
+                    <filter string="Archivadas" name="active_filter" domain="[('active', '=', True)]" context="{'group_by': 'active'}"/>
+                </search>
+            </field>
+        </record>
      <!-- TREE -->
         <record id="view_gradein_equipment_tree" model="ir.ui.view">
             <field name="name">gradein.equipment.view.tree</field>
@@ -11,7 +22,6 @@
                     <field name="name"/>
                     <field name="description"/>
                     <field name="price"/>
-
                 </tree>
             </field>
         </record>
@@ -20,7 +30,7 @@
 
         <!-- ACTION -->
         <record id="action_gradein_equipment" model="ir.actions.act_window">
-            <field name="name">Equipment Type</field>
+            <field name="name">Equipment</field>
             <field name="res_model">gradein.equipment</field>
             <field name="view_mode">tree</field>
             <field name="view_id" ref="view_gradein_equipment_tree"/>
