--- a/views/gradein_equipment_views.xml
+++ b/views/gradein_equipment_views.xml
@@ -1,7 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-    
+
+        <!-- FORM -->
+        <record id="view_gradein_equipment_form" model="ir.ui.view">
+            <field name="name">gradein.equipment.view.form</field>
+            <field name="model">gradein.equipment</field>
+            <field name="arch" type="xml">
+                <form>
+                    <group>
+                        <field name="name"/>
+                        <field name="image"/>
+                        <field name="description"/>
+                        <field name="active"/>
+                        <field name="price"/>
+                    </group>
+                </form>
+            </field>
+        </record>    
+
      <!-- TREE -->
         <record id="view_gradein_equipment_tree" model="ir.ui.view">
             <field name="name">gradein.equipment.view.tree</field>
@@ -22,7 +39,7 @@
         <record id="action_gradein_equipment" model="ir.actions.act_window">
             <field name="name">Equipment</field>
             <field name="res_model">gradein.equipment</field>
-            <field name="view_mode">tree</field>
+            <field name="view_mode">tree,form,search</field>
             <field name="view_id" ref="view_gradein_equipment_tree"/>
         </record>
 
