--- a/views/menu_services.xml
+++ b/views/menu_services.xml
@@ -1,29 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <!-- TREE -->
-        <record id="view_gradein_question_tree" model="ir.ui.view">
-            <field name="name">Gradein Question</field>
-            <field name="model">gradein.equipment</field>
-            <field name="arch" type="xml">
-                <tree>
-                    <field name="name" />
-                    <field name="active" />
-                </tree>
-            </field>
-        </record>
-
-        <!-- ACTION -->
-        <record id="action_menu_services" model="ir.actions.act_window">
-            <field name="name">Menu Services</field>
-            <field name="res_model">gradein.equipment</field>
-            <field name="view_mode">tree</field>
-            <field name="view_id" ref="view_gradein_question_tree" />
-        </record>
 
         <!-- Menú de Servicios -->
         <menuitem id="menu_services"
             name="Services"
+            action="action_gradein_order"
         />
 
         <menuitem id="menu_services_config"
