--- a/views/menu_services.xml
+++ b/views/menu_services.xml
@@ -5,23 +5,13 @@
         <!-- Menú de Servicios -->
         <menuitem id="menu_services"
             name="Services"
-            action="action_gradein_order"
-        />
+            action="action_gradein_order"/>
 
         <menuitem id="menu_services_config"
             name="Configuration"
             parent="menu_services"
-            action="action_menu_services" 
+            action="action_gradein_order" 
            groups="group_services_manager"/>
-
-
-
-        <menuitem id="menu_action_gradein_questions" 
-            name="Questions" 
-            parent="menu_services_config"
-           action="action_menu_services"/>
-
-
     </data>
     
 </odoo>
