--- a/views/menu_services.xml
+++ b/views/menu_services.xml
@@ -11,16 +11,8 @@
         <menuitem id="menu_services_config"
             name="Configuration"
             parent="menu_services"
-            action="action_menu_services" 
+            action="action_gradein_order" 
            groups="group_services_manager"/>
-
-
-
-        <menuitem id="menu_action_gradein_questions" 
-            name="Questions" 
-            parent="menu_services_config"
-           action="action_menu_services"/>
-
 
     </data>
     
