--- a/views/menu_services.xml
+++ b/views/menu_services.xml
@@ -14,6 +14,13 @@
             action="action_gradein_order" 
            groups="group_services_manager"/>
 
+           
+        <!-- Elemento de menú (Menu item) -->
+        <menuitem id="menu_action_gradein_order"
+                  name="Order GradeIn"
+                  parent="menu_services"
+                  action="action_gradein_order"/>
+
     </data>
     
 </odoo>
