--- a/views/gradein_equipment_views.xml
+++ b/views/gradein_equipment_views.xml
@@ -26,7 +26,7 @@
                 <search>
                     <field name="name" filter_domain="[('name', 'ilike', self)]"/>
                     <field name="description" filter_domain="[('name', 'ilike', self)]"/>
-                    <filter string="Archivadas" name="active_filter" domain="[('active', '=', True)]" context="{'group_by': 'active'}"/>
+                    <filter string="archived" name="active_filter" domain="[('active', '=', True)]" context="{'group_by': 'active'}"/>
                 </search>
             </field>
         </record>
