--- a/views/gradein_question_views.xml
+++ b/views/gradein_question_views.xml
@@ -25,7 +25,7 @@
             <field name="arch" type="xml">
                 <search>
                     <field name="name" filter_domain="[('name', 'ilike', self)]"/>
-                    <filter string="Archivadas" name="active_filter" domain="[('active', '=', True)]" context="{'group_by': 'active'}"/>
+                    <filter string="archived" name="active_filter" domain="[('active', '=', True)]" context="{'group_by': 'active'}"/>
                 </search>
             </field>
         </record>
