--- a/views/gradein_rejection_motive.xml
+++ b/views/gradein_rejection_motive.xml
@@ -38,7 +38,7 @@
             <field name="arch" type="xml">
                 <search>
                     <field name="name" string="Nombre" filter_domain="[('name', 'ilike', self)]"/>
-                    <filter string="Archivadas" name="active_filter" domain="[('active', '=', False)]"/>
+                    <filter string="Archived" name="active_filter" domain="[('active', '=', False)]"/>
                 </search>
             </field>
         </record>
