--- a/views/gradein_equipment_type_views.xml
+++ b/views/gradein_equipment_type_views.xml
@@ -38,7 +38,7 @@
             <field name="arch" type="xml">
                 <search>
                     <field name="name"  filter_domain="[('name', 'ilike', self)]"/>
-                    <filter string="Archivadas" name="active_filter" domain="[('active', '=', False)]"/>
+                    <filter string="archived" name="active_filter" domain="[('active', '=', False)]"/>
                 </search>
             </field>
         </record>
